--- a/portfolio.html
+++ b/portfolio.html
@@ -143,10 +143,10 @@
                         <a href="" class="services__link" >
                             <div class="services__picture">
                               <picture>
-                              <source srcset="./images/mobile/Golden-Star.jpg 1x, ./images/mobile/Golden-Star@x2.jpg 2x" media="(max-width: 767px)" />
-                              <source srcset="./images/tablet/Golden-Star.jpg 1x, ./images/tablet/Golden-Star@x2.jpg 2x" media="(max-width: 1199px)" />
-                              <source srcset="./images/laptop/Golden-Star.jpg 1x, ./images/laptop/Golden-Star@x2.jpg 2x" media="(min-width: 1200px)" />
-                              <img src="./images/mobile/Golden-Star.jpg" alt="Постер New Orlean vs Golden Star" />
+                              <source srcset="./images/mobile/golden-star.jpg 1x, ./images/mobile/golden-star@x2.jpg 2x" media="(max-width: 767px)" />
+                              <source srcset="./images/tablet/golden-star.jpg 1x, ./images/tablet/golden-star@x2.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/laptop/golden-star.jpg 1x, ./images/laptop/golden-star@x2.jpg 2x" media="(min-width: 1200px)" />
+                              <img src="./images/mobile/golden-star.jpg" alt="Постер New Orlean vs Golden Star" />
                               </picture>
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
@@ -163,10 +163,10 @@
                         <a href="" class="services__link" >
                             <div class="services__picture">
                               <picture>
-                              <source srcset="./images/mobile/Seafood.jpg 1x, ./images/mobile/Seafood@2x.jpg 2x" media="(max-width: 767px)" />
-                              <source srcset="./images/tablet/Seafood.jpg 1x, ./images/tablet/Seafood@2x.jpg 2x" media="(max-width: 1199px)" />
-                              <source srcset="./images/laptop/Seafood.jpg 1x, ./images/laptop/Seafood@2x.jpg 2x" media="(min-width: 1200px)" />
-                              <img src="./images/mobile/Seafood.jpg" alt="Ресторан Seafood" />
+                              <source srcset="./images/mobile/seafood.jpg 1x, ./images/mobile/seafood@2x.jpg 2x" media="(max-width: 767px)" />
+                              <source srcset="./images/tablet/seafood.jpg 1x, ./images/tablet/seafood@2x.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/laptop/seafood.jpg 1x, ./images/laptop/seafood@2x.jpg 2x" media="(min-width: 1200px)" />
+                              <img src="./images/mobile/seafood.jpg" alt="Ресторан Seafood" />
                               </picture>
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
@@ -183,10 +183,10 @@
                         <a href="" class="services__link" >
                             <div class="services__picture">
                               <picture>
-                              <source srcset="./images/mobile/Prime.jpg 1x, ./images/mobile/Prime@x2.jpg 2x" media="(max-width: 767px)" />
-                              <source srcset="./images/tablet/Prime.jpg 1x, ./images/tablet/Prime@x2.jpg 2x" media="(max-width: 1199px)" />
-                              <source srcset="./images/laptop/Prime.jpg 1x, ./images/laptop/Prime@x2.jpg 2x" media="(min-width: 1200px)" />
-                              <img src="./images/mobile/Prime.jpg" alt="Проект Prime" />
+                              <source srcset="./images/mobile/prime.jpg 1x, ./images/mobile/prime@x2.jpg 2x" media="(max-width: 767px)" />
+                              <source srcset="./images/tablet/prime.jpg 1x, ./images/tablet/prime@x2.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/laptop/prime.jpg 1x, ./images/laptop/prime@x2.jpg 2x" media="(min-width: 1200px)" />
+                              <img src="./images/mobile/prime.jpg" alt="Проект Prime" />
                               </picture>
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
@@ -203,10 +203,10 @@
                         <a href="" class="services__link" >
                             <div class="services__picture">
                               <picture>
-                                <source srcset="./images/mobile/Boxes.jpg 1x, ./images/mobile/Boxes@x2.jpg 2x" media="(max-width: 767px)" />
-                                <source srcset="./images/tablet/Boxes.jpg 1x, ./images/tablet/Boxes@x2.jpg 2x" media="(max-width: 1199px)" />
-                                <source srcset="./images/laptop/Boxes.jpg 1x, ./images/laptop/Boxes@x2.jpg 2x" media="(min-width: 1200px)" />
-                                <img src="./images/mobile/Boxes.jpg" alt="Проект Boxes" />
+                                <source srcset="./images/mobile/boxes.jpg 1x, ./images/mobile/boxes@x2.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/boxes.jpg 1x, ./images/tablet/boxes@x2.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/boxes.jpg 1x, ./images/laptop/boxes@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <img src="./images/mobile/boxes.jpg" alt="Проект Boxes" />
                               </picture>
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
@@ -223,10 +223,10 @@
                         <a href="" class="services__link" >
                             <div class="services__picture">
                                 <picture>
-                                <source srcset="./images/mobile/Borders.jpg 1x, ./images/mobile/Borders@x2.jpg 2x" media="(max-width: 767px)" />
-                                <source srcset="./images/tablet/Borders.jpg 1x, ./images/tablet/Borders@x2.jpg 2x" media="(max-width: 1199px)" />
-                                <source srcset="./images/laptop/Borders.jpg 1x, ./images/laptop/Borders@x2.jpg 2x" media="(min-width: 1200px)" />
-                                <img src="./images/mobile/Borders.jpg" alt="Inspiration has no Borders" />
+                                <source srcset="./images/mobile/borders.jpg 1x, ./images/mobile/borders@x2.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/borders.jpg 1x, ./images/tablet/borders@x2.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/borders.jpg 1x, ./images/laptop/borders@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <img src="./images/mobile/borders.jpg" alt="Inspiration has no Borders" />
                               </picture>
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
@@ -263,10 +263,10 @@
                         <a href="" class="services__link">
                             <div class="services__picture">
                                 <picture>
-                                <source srcset="./images/mobile/LAB.jpg 1x, ./images/mobile/LAB@x2.jpg 2x" media="(max-width: 767px)" />
-                                <source srcset="./images/tablet/LAB.jpg 1x, ./images/tablet/LAB@x2.jpg 2x" media="(max-width: 1199px)" />
-                                <source srcset="./images/laptop/LAB.jpg 1x, ./images/laptop/LAB@x2.jpg 2x" media="(min-width: 1200px)" />
-                                <img src="./images/mobile/LAB.jpg" alt="Проект LAB" />
+                                <source srcset="./images/mobile/lab.jpg 1x, ./images/mobile/lab@x2.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/lab.jpg 1x, ./images/tablet/lab@x2.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/lab.jpg 1x, ./images/laptop/lab@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <img src="./images/mobile/lab.jpg" alt="Проект LAB" />
                                 </picture>                            
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
@@ -284,10 +284,10 @@
                             <div class="services__picture">
                             <!-- <img src="./images/business.jpg" alt="Growing Business" width="370"> -->
                                 <picture>
-                                <source srcset="./images/mobile/Growing-Business.jpg 1x, ./images/mobile/Growing-Business@x2.jpg 2x" media="(max-width: 767px)" />
-                                <source srcset="./images/tablet/Growing-Business.jpg 1x, ./images/tablet/Growing-Business@x2.jpg 2x" media="(max-width: 1199px)" />
-                                <source srcset="./images/laptop/Growing-Business.jpg 1x, ./images/laptop/Growing-Business@x2.jpg 2x" media="(min-width: 1200px)" />
-                                <img src="./images/mobile/Growing-Business.jpg" alt="Growing Business" />
+                                <source srcset="./images/mobile/growing-business.jpg 1x, ./images/mobile/growing-business@x2.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/growing-business.jpg 1x, ./images/tablet/growing-business@x2.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/growing-business.jpg 1x, ./images/laptop/growing-business@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <img src="./images/mobile/growing-business.jpg" alt="Growing Business" />
                                 </picture>
                             <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
