--- a/portfolio.html
+++ b/portfolio.html
@@ -14,19 +14,19 @@
       <div class="container">
         <div class="header-inner">
           <nav class="page-header__nav">
-            <div class="position" id="position">
+            <div class="position">
               <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-              <button type="button" aria-expanded="false" class="button__logo">
-                <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="position">
-                  <use class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
-                  <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
+              <button type="button" aria-expanded="false" class="button__logo" mob-menu__open-btn>
+                <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="page-header__menu">
+                  <use class="icon-menu" href="./images/sprite.svg#iconmenu_open " mob-menu__open-btn></use>
+                  <use class="icon-cross" href="./images/sprite.svg#iconmenu_close" mob-menu__close-btn></use>
                 </svg>
               </button>
             </div>
-            <div class="page-header__menu">
+            <div class="page-header__menu" id="page-header__menu" mob-menu>
               <ul class="page-header__list page-header__list--nav">
                 <li class="page-header__item page-header__item--nav">
-                  <a class="page-header__link " href="./index.html">Студия</a>
+                  <a class="page-header__link" href="./index.html">Студия</a>
                 </li>
                 <li class="page-header__item page-header__item--nav">
                   <a class="page-header__link page-header__link--active" href="./portfolio.html">Портфолио</a>
