--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@
                     <li class="comanda__item">
                         <!-- <img class="foto" src="./images/olga.jpg" alt="Ольга Репина" width="270"> -->
                         <picture>
-                          <source srcset="./images/mobile/olga.jpg 1x, ./images/mobile/olga@2X.jpg 2x" media="(max-width: 767px)" />
-                          <source srcset="./images/tablet/olga.jpg 1x, ./images/tablet/olga@2X.jpg 2x" media="(max-width: 1199px)" />
-                          <source srcset="./images/laptop/olga.jpg 1x, ./images/laptop/olga@2X.jpg 2x" media="(min-width: 1200px)" />
+                          <source srcset="./images/mobile/olga.jpg 1x, ./images/mobile/olga@2x.jpg 2x" media="(max-width: 767px)" />
+                          <source srcset="./images/tablet/olga.jpg 1x, ./images/tablet/olga@2x.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="./images/laptop/olga.jpg 1x, ./images/laptop/olga@2x.jpg 2x" media="(min-width: 1200px)" />
                           <img class="foto" src="./images/mobile/olga.jpg" alt="Ольга Репина" />
                         </picture>
                         <div class="name-container">
@@ -334,9 +334,9 @@
                     </li>
                     <li class="comanda__item">
                         <picture>
-                          <source srcset="./images/mobile/nicholas.jpg 1x, ./images/mobile/nicholas@2X.jpg 2x" media="(max-width: 767px)" />
-                          <source srcset="./images/tablet/nicholas.jpg 1x, ./images/tablet/nicholas@2X.jpg 2x" media="(max-width: 1199px)" />
-                          <source srcset="./images/laptop/nicholas.jpg 1x, ./images/laptop/nicholas@2X.jpg 2x" media="(min-width: 1200px)" />
+                          <source srcset="./images/mobile/nicholas.jpg 1x, ./images/mobile/nicholas@2x.jpg 2x" media="(max-width: 767px)" />
+                          <source srcset="./images/tablet/nicholas.jpg 1x, ./images/tablet/nicholas@2x.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="./images/laptop/nicholas.jpg 1x, ./images/laptop/nicholas@2x.jpg 2x" media="(min-width: 1200px)" />
                           <img class="foto" src="./images/mobile/nicholas.jpg" alt="Николай Тарасов" />
                         </picture>
                         <div class="name-container">
@@ -372,9 +372,9 @@
                     </li>
                     <li class="comanda__item">
                         <picture>
-                          <source srcset="./images/mobile/michael.jpg 1x, ./images/mobile/michael@2X.jpg 2x" media="(max-width: 767px)" />
-                          <source srcset="./images/tablet/michael.jpg 1x, ./images/tablet/michael@2X.jpg 2x" media="(max-width: 1199px)" />
-                          <source srcset="./images/laptop/michael.jpg 1x, ./images/laptop/michael@2X.jpg 2x" media="(min-width: 1200px)" />
+                          <source srcset="./images/mobile/michael.jpg 1x, ./images/mobile/michael@2x.jpg 2x" media="(max-width: 767px)" />
+                          <source srcset="./images/tablet/michael.jpg 1x, ./images/tablet/michael@2x.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="./images/laptop/michael.jpg 1x, ./images/laptop/michael@2x.jpg 2x" media="(min-width: 1200px)" />
                           <img class="foto" src="./images/mobile/michael.jpg" alt="Михаил Ермаков" />
                         </picture>
                         <div class="name-container">
