--- a/portfolio.html
+++ b/portfolio.html
@@ -123,9 +123,9 @@
                         <a href="" class="services__link" >
                             <div class="services__picture">
                             <picture>
-                              <source srcset="./images/mobile/tehno.jpg 1x, ./images/mobile/tehno@2X.jpg 2x" media="(max-width: 767px)" />
-                              <source srcset="./images/tablet/tehno.jpg 1x, ./images/tablet/tehno@2X.jpg 2x" media="(max-width: 1199px)" />
-                              <source srcset="./images/laptop/tehno.jpg 1x, ./images/laptop/tehno@2X.jpg 2x" media="(min-width: 1200px)" />
+                              <source srcset="./images/mobile/tehno.jpg 1x, ./images/mobile/tehno@2x.jpg 2x" media="(max-width: 767px)" />
+                              <source srcset="./images/tablet/tehno.jpg 1x, ./images/tablet/tehno@2x.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/laptop/tehno.jpg 1x, ./images/laptop/tehno@2x.jpg 2x" media="(min-width: 1200px)" />
                               <img src="./images/mobile/tehno.jpg" alt="Технокряк" />
                             </picture>
                                 <div class=" services__fon">
@@ -143,9 +143,9 @@
                         <a href="" class="services__link" >
                             <div class="services__picture">
                               <picture>
-                              <source srcset="./images/mobile/golden-star.jpg 1x, ./images/mobile/golden-star@x2.jpg 2x" media="(max-width: 767px)" />
-                              <source srcset="./images/tablet/golden-star.jpg 1x, ./images/tablet/golden-star@x2.jpg 2x" media="(max-width: 1199px)" />
-                              <source srcset="./images/laptop/golden-star.jpg 1x, ./images/laptop/golden-star@x2.jpg 2x" media="(min-width: 1200px)" />
+                              <source srcset="./images/mobile/golden-star.jpg 1x, ./images/mobile/golden-star@2x.jpg 2x" media="(max-width: 767px)" />
+                              <source srcset="./images/tablet/golden-star.jpg 1x, ./images/tablet/golden-star@2x.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/laptop/golden-star.jpg 1x, ./images/laptop/golden-star@2x.jpg 2x" media="(min-width: 1200px)" />
                               <img src="./images/mobile/golden-star.jpg" alt="Постер New Orlean vs Golden Star" />
                               </picture>
                                 <div class=" services__fon">
@@ -183,9 +183,9 @@
                         <a href="" class="services__link" >
                             <div class="services__picture">
                               <picture>
-                              <source srcset="./images/mobile/prime.jpg 1x, ./images/mobile/prime@x2.jpg 2x" media="(max-width: 767px)" />
-                              <source srcset="./images/tablet/prime.jpg 1x, ./images/tablet/prime@x2.jpg 2x" media="(max-width: 1199px)" />
-                              <source srcset="./images/laptop/prime.jpg 1x, ./images/laptop/prime@x2.jpg 2x" media="(min-width: 1200px)" />
+                              <source srcset="./images/mobile/prime.jpg 1x, ./images/mobile/prime@2x.jpg 2x" media="(max-width: 767px)" />
+                              <source srcset="./images/tablet/prime.jpg 1x, ./images/tablet/prime@2x.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/laptop/prime.jpg 1x, ./images/laptop/prime@2x.jpg 2x" media="(min-width: 1200px)" />
                               <img src="./images/mobile/prime.jpg" alt="Проект Prime" />
                               </picture>
                                 <div class=" services__fon">
@@ -203,9 +203,9 @@
                         <a href="" class="services__link" >
                             <div class="services__picture">
                               <picture>
-                                <source srcset="./images/mobile/boxes.jpg 1x, ./images/mobile/boxes@x2.jpg 2x" media="(max-width: 767px)" />
-                                <source srcset="./images/tablet/boxes.jpg 1x, ./images/tablet/boxes@x2.jpg 2x" media="(max-width: 1199px)" />
-                                <source srcset="./images/laptop/boxes.jpg 1x, ./images/laptop/boxes@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <source srcset="./images/mobile/boxes.jpg 1x, ./images/mobile/boxes@2x.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/boxes.jpg 1x, ./images/tablet/boxes@2x.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/boxes.jpg 1x, ./images/laptop/boxes@2x.jpg 2x" media="(min-width: 1200px)" />
                                 <img src="./images/mobile/boxes.jpg" alt="Проект Boxes" />
                               </picture>
                                 <div class=" services__fon">
@@ -223,9 +223,9 @@
                         <a href="" class="services__link" >
                             <div class="services__picture">
                                 <picture>
-                                <source srcset="./images/mobile/borders.jpg 1x, ./images/mobile/borders@x2.jpg 2x" media="(max-width: 767px)" />
-                                <source srcset="./images/tablet/borders.jpg 1x, ./images/tablet/borders@x2.jpg 2x" media="(max-width: 1199px)" />
-                                <source srcset="./images/laptop/borders.jpg 1x, ./images/laptop/borders@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <source srcset="./images/mobile/borders.jpg 1x, ./images/mobile/borders@2x.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/borders.jpg 1x, ./images/tablet/borders@2x.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/borders.jpg 1x, ./images/laptop/borders@2x.jpg 2x" media="(min-width: 1200px)" />
                                 <img src="./images/mobile/borders.jpg" alt="Inspiration has no Borders" />
                               </picture>
                                 <div class=" services__fon">
@@ -243,9 +243,9 @@
                         <a href="" class="services__link" >
                             <div class="services__picture">
                                 <picture>
-                                <source srcset="./images/mobile/limited-edition.jpg 1x, ./images/mobile/limited-edition@x2.jpg 2x" media="(max-width: 767px)" />
-                                <source srcset="./images/tablet/limited-edition.jpg 1x, ./images/tablet/limited-edition@x2.jpg 2x" media="(max-width: 1199px)" />
-                                <source srcset="./images/laptop/limited-edition.jpg 1x, ./images/laptop/limited-edition@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <source srcset="./images/mobile/limited-edition.jpg 1x, ./images/mobile/limited-edition@2x.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/limited-edition.jpg 1x, ./images/tablet/limited-edition@2x.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/limited-edition.jpg 1x, ./images/laptop/limited-edition@2x.jpg 2x" media="(min-width: 1200px)" />
                                 <img src="./images/mobile/limited-edition.jpg" alt="Издание Limited Edition" />
                                 </picture>
                                 <div class=" services__fon">
@@ -263,9 +263,9 @@
                         <a href="" class="services__link">
                             <div class="services__picture">
                                 <picture>
-                                <source srcset="./images/mobile/lab.jpg 1x, ./images/mobile/lab@x2.jpg 2x" media="(max-width: 767px)" />
-                                <source srcset="./images/tablet/lab.jpg 1x, ./images/tablet/lab@x2.jpg 2x" media="(max-width: 1199px)" />
-                                <source srcset="./images/laptop/lab.jpg 1x, ./images/laptop/lab@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <source srcset="./images/mobile/lab.jpg 1x, ./images/mobile/lab@2x.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/lab.jpg 1x, ./images/tablet/lab@2x.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/lab.jpg 1x, ./images/laptop/lab@2x.jpg 2x" media="(min-width: 1200px)" />
                                 <img src="./images/mobile/lab.jpg" alt="Проект LAB" />
                                 </picture>                            
                                 <div class=" services__fon">
@@ -284,9 +284,9 @@
                             <div class="services__picture">
                             <!-- <img src="./images/business.jpg" alt="Growing Business" width="370"> -->
                                 <picture>
-                                <source srcset="./images/mobile/growing-business.jpg 1x, ./images/mobile/growing-business@x2.jpg 2x" media="(max-width: 767px)" />
-                                <source srcset="./images/tablet/growing-business.jpg 1x, ./images/tablet/growing-business@x2.jpg 2x" media="(max-width: 1199px)" />
-                                <source srcset="./images/laptop/growing-business.jpg 1x, ./images/laptop/growing-business@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <source srcset="./images/mobile/growing-business.jpg 1x, ./images/mobile/growing-business@2x.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/growing-business.jpg 1x, ./images/tablet/growing-business@2x.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/growing-business.jpg 1x, ./images/laptop/growing-business@2x.jpg 2x" media="(min-width: 1200px)" />
                                 <img src="./images/mobile/growing-business.jpg" alt="Growing Business" />
                                 </picture>
                             <div class=" services__fon">
