--- a/portfolio.html
+++ b/portfolio.html
@@ -16,14 +16,14 @@
           <nav class="page-header__nav">
             <div class="position">
               <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-              <button type="button" aria-expanded="false" class="button__logo" mob-menu__open-btn>
-                <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="page-header__menu">
-                  <use class="icon-menu" href="./images/sprite.svg#iconmenu_open " mob-menu__open-btn></use>
-                  <use class="icon-cross" href="./images/sprite.svg#iconmenu_close" mob-menu__close-btn></use>
+              <button type="button" class="button__logo" data-mobBtn>
+                <svg width="40" height="40" aria-label="mobile menu switch">
+                  <use class="icon-menu" href="./images/sprite.svg#iconmenu_open " data-mob-open></use>
+                  <use class="icon-cross" href="./images/sprite.svg#iconmenu_close" data-mob-close></use>
                 </svg>
               </button>
             </div>
-            <div class="page-header__menu" id="page-header__menu" mob-menu>
+            <div class="page-header__menu" data-mob>
               <ul class="page-header__list page-header__list--nav">
                 <li class="page-header__item page-header__item--nav">
                   <a class="page-header__link" href="./index.html">Студия</a>
