--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     <li class="comanda__item">
                          <picture>
                           <source srcset="./images/laptop/olga.jpg 1x, ./images/laptop/olga@2x.jpg 2x" media="(min-width: 1200px)" />
-                          <source srcset="./images/tablet/olga.jpg 1x, ./images/tablet/olga@2x.jpg 2x" media="(min-width: 768px)" />
+                          <source srcset="./images/tablet/olga.jpg 1x, ./images/tablet/olga@2x.jpg 2x" media="(max-width: 1199px)" />
                           <source srcset="./images/mobile/olga.jpg 1x, ./images/mobile/olga@2x.jpg 2x" media="(max-width: 767px)" />
                           <img class="foto" src="./images/mobile/olga.jpg" alt="Ольга Репина" />
                         </picture>
