--- a/portfolio.html
+++ b/portfolio.html
@@ -16,12 +16,18 @@
           <nav class="page-header__nav">
             <div class="position">
               <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-              <button type="button" class="button__logo" data-mobBtn>
-                <svg width="40" height="40" aria-label="mobile menu switch">
-                  <use class="icon-menu" href="./images/sprite.svg#iconmenu_open " data-mob-open></use>
-                  <use class="icon-cross" href="./images/sprite.svg#iconmenu_close" data-mob-close></use>
-                </svg>
-              </button>
+              <div class="pos">
+                <button type="button" class="button__logo" data-mob-open>
+                  <svg width="40" height="40" aria-label="mobile menu switch">
+                    <use class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
+                  </svg>
+                </button>
+                <button type="button" class="button__logos" data-mob-close data-mobbtn>
+                  <svg width="40" height="40" aria-label="mobile menu switch">
+                    <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
+                  </svg>
+                </button>
+              </div>
             </div>
             <div class="page-header__menu" data-mob>
               <ul class="page-header__list page-header__list--nav">
@@ -85,7 +91,6 @@
                   <a class="social-border" href="">LinkedIn</a>
                 </li>
               </ul>
-    
             </div>
           </nav>
         </div>
@@ -117,7 +122,7 @@
         </section>
             <!-- група послуг -->
         <section class="services">
-          <div class="container">
+          <div class="container services__container">
             <ul class="services__list">
                     <li class="services__item">
                         <a href="" class="services__link" >
