--- a/portfolio.html
+++ b/portfolio.html
@@ -16,18 +16,13 @@
           <nav class="page-header__nav">
             <div class="position">
               <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-              <div class="pos">
-                <button type="button" class="button__logo" data-mob-open>
+              <button type="button" class="button__logo" data-mob-open data-mobbtn>
                   <svg width="40" height="40" aria-label="mobile menu switch">
-                    <use class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
+                  <use class="icon-menu" href="./images/sprite.svg#iconmenu_open " ></use>
+                  <use class="icon-cross" href="./images/sprite.svg#iconmenu_close" ></use>
                   </svg>
-                </button>
-                <button type="button" class="button__logos" data-mob-close data-mobbtn>
-                  <svg width="40" height="40" aria-label="mobile menu switch">
-                    <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
-                  </svg>
-                </button>
-              </div>
+              </button>
+
             </div>
             <div class="page-header__menu" data-mob>
               <ul class="page-header__list page-header__list--nav">
